# sample_cpp_project

./: CMakeLists.txt  README  README.md  main.cpp  my_add.cpp  test_add.cpp
.github/workflows/: test.yaml
